// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseEntry() miscellaneous 1`] = `
{
  "parsed": <React.Fragment>
    <React.Fragment>
      <React.Fragment>
        record
      </React.Fragment>
    </React.Fragment>
  </React.Fragment>,
  "rawString": "record",
  "size": -1,
  "traceUrl": null,
  "type": "string",
}
`;

exports[`parseEntry() miscellaneous 2`] = `
{
  "parsed": <React.Fragment>
    <React.Fragment>
      <React.Fragment>
        
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        in
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        Fragment
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        in
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        Grid5
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        (created
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        by
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        List6)
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        in
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        List6
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        (created
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        by
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        AutoSizer2)
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        in
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        div
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        (created
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        by
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        AutoSizer2)
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        in
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        AutoSizer2
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        (created
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        by
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        PlayerList)
      </React.Fragment>
    </React.Fragment>
  </React.Fragment>,
  "rawString": " in Fragment in Grid5 (created by List6) in List6 (created by AutoSizer2) in div (created by AutoSizer2) in AutoSizer2 (created by PlayerList)",
  "size": -1,
  "traceUrl": null,
  "type": "string",
}
`;

exports[`parseEntry() miscellaneous 3`] = `
{
  "parsed": <React.Fragment>
    <React.Fragment>
      <React.Fragment>
        
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        in
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        Fragment
      </React.Fragment>
    </React.Fragment>
  </React.Fragment>,
  "rawString": " in Fragment",
  "size": -1,
  "traceUrl": null,
  "type": "string",
}
`;

exports[`parseEntry() miscellaneous 4`] = `
{
  "parsed": <React.Fragment>
    <React.Fragment>
      <React.Fragment>
        Warning:
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        Each
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        child
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        in
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        a
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        list
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        should
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        have
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        a
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        unique
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        "key"
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        prop.%s%s
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        See
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        https://fb.me/react-warning-keys
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        for
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        more
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        information.%s
      </React.Fragment>
    </React.Fragment>
  </React.Fragment>,
  "rawString": "Warning: Each child in a list should have a unique "key" prop.%s%s See https://fb.me/react-warning-keys for more information.%s",
  "size": -1,
  "traceUrl": null,
  "type": "string",
}
`;

exports[`parseEntry() object or array strings 1`] = `
{
  "parsed": {
    "message": "TypeError: Failed to fetch
    at Object.getRaw (http://localhost:8234/static/chunk-6MCQJ7Y6.js:208552:24)
    End of stack for Error object",
    "status": 0,
  },
  "rawString": "{"status":0,"message":"TypeError: Failed to fetch\\n    at Object.getRaw (http://localhost:8234/static/chunk-6MCQJ7Y6.js:208552:24)\\n    End of stack for Error object"}",
  "size": 2,
  "type": "object",
}
`;

exports[`parseEntry() strings containing urls 1`] = `
{
  "parsed": <React.Fragment>
    <React.Fragment>
      <React.Fragment>
        rowRenderer
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        <Link
          target="_blank"
          to="https://example.com/path/to/file.js"
        >
          file.js:123:456
        </Link>
      </React.Fragment>
    </React.Fragment>
  </React.Fragment>,
  "rawString": "rowRenderer (https://example.com/path/to/file.js:123:456)",
  "size": -1,
  "traceUrl": <Link
    target="_blank"
    to="https://example.com/path/to/file.js"
  >
    file.js:123:456
  </Link>,
  "type": "string",
}
`;

exports[`parseEntry() strings containing urls 2`] = `
{
  "parsed": <React.Fragment>
    <React.Fragment>
      <React.Fragment>
        ENTRY
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        Object.createElementWithValidation
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        [as
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        createElement]
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        <Link
          target="_blank"
          to="https://example.com/path/to/file.js"
        >
          file.js:123:456
        </Link>
      </React.Fragment>
    </React.Fragment>
  </React.Fragment>,
  "rawString": "ENTRY Object.createElementWithValidation [as createElement] (https://example.com/path/to/file.js:123:456)",
  "size": -1,
  "traceUrl": <Link
    target="_blank"
    to="https://example.com/path/to/file.js"
  >
    file.js:123:456
  </Link>,
  "type": "string",
}
`;

exports[`parseEntry() strings containing urls 3`] = `
{
  "parsed": <React.Fragment>
    <React.Fragment>
      <React.Fragment>
        ENTRY
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        Object.createElementWithValidation
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        [as
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        createElement]
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        (https://example.com/path/to/file.js)
      </React.Fragment>
    </React.Fragment>
  </React.Fragment>,
  "rawString": "ENTRY Object.createElementWithValidation [as createElement] (https://example.com/path/to/file.js)",
  "size": -1,
  "traceUrl": null,
  "type": "string",
}
`;

exports[`parseEntry() strings containing urls 4`] = `
{
  "parsed": <React.Fragment>
    <React.Fragment>
      <React.Fragment>
        :1223:12
      </React.Fragment>
    </React.Fragment>
  </React.Fragment>,
  "rawString": ":1223:12",
  "size": -1,
  "traceUrl": null,
  "type": "string",
}
`;

exports[`parseEntry() strings containing urls 5`] = `
{
  "parsed": <React.Fragment>
    <React.Fragment>
      <React.Fragment>
        <Link
          target="_blank"
          to="https://example.com/path/to/file.js"
        >
          file.js:123:456
        </Link>
      </React.Fragment>
    </React.Fragment>
  </React.Fragment>,
  "rawString": "https://example.com/path/to/file.js:123:456",
  "size": -1,
  "traceUrl": <Link
    target="_blank"
    to="https://example.com/path/to/file.js"
  >
    file.js:123:456
  </Link>,
  "type": "string",
}
`;

exports[`parseEntry() strings containing urls 6`] = `
{
  "parsed": <React.Fragment>
    <React.Fragment>
      <React.Fragment>
        <Link
          target="_blank"
          to="https://example.com/path/to/file.js"
        >
          file.js:123:456
        </Link>
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        End
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        of
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        object
      </React.Fragment>
    </React.Fragment>
  </React.Fragment>,
  "rawString": "https://example.com/path/to/file.js:123:456 End of object",
  "size": -1,
  "traceUrl": <Link
    target="_blank"
    to="https://example.com/path/to/file.js"
  >
    file.js:123:456
  </Link>,
  "type": "string",
}
`;

exports[`parseEntry() strings containing urls 7`] = `
{
  "parsed": <React.Fragment>
    <React.Fragment>
      <React.Fragment>
        <Link
          target="_blank"
          to="https://example.com/path/to/file.js"
        >
          file.js:123:456
        </Link>
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        <Link
          target="_blank"
          to="https://example.com/path/to/file.js"
        >
          file.js:123:456
        </Link>
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
         
      </React.Fragment>
    </React.Fragment>
    <React.Fragment>
      <React.Fragment>
        <Link
          target="_blank"
          to="https://example.com/path/to/file.js"
        >
          file.js:123:456
        </Link>
      </React.Fragment>
    </React.Fragment>
  </React.Fragment>,
  "rawString": "https://example.com/path/to/file.js:123:456 https://example.com/path/to/file.js:123:456 https://example.com/path/to/file.js:123:456",
  "size": -1,
  "traceUrl": <Link
    target="_blank"
    to="https://example.com/path/to/file.js"
  >
    file.js:123:456
  </Link>,
  "type": "string",
}
`;
